# wit-bindgen

./: RFC-opaque-rep-methods.md
.github/: dependabot.yml
crates/guest-rust/: Cargo.toml
crates/guest-rust/macro/src/: lib.rs
crates/guest-rust/src/rt/: mod.rs
crates/guest-rust/src/rt/async_support/: cabi.rs  stream_support.rs
crates/rust/src/: bindgen.rs  interface.rs  lib.rs
crates/rust/tests/: codegen.rs
tests/runtime-async/async/stream-next-write-one/: runner.rs  test.rs
tests/runtime/resource_floats_opaque/: compose.wac  intermediate.rs  leaf.rs  runner.rs  test.wit
