[package]
name = "wit-bindgen"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = 'https://github.com/bytecodealliance/wit-bindgen'
description = """
Rust bindings generator and runtime support for WIT and the component model.
Used when compiling Rust programs to the component model.
"""

# Note that this is specifically different from the workspace's MSRV because
# this crate gets included in a number of other crates in the Rust ecosystem
# (e.g. through the `wasip{1,2,3}` crates) and thus we want it to be a bit more
# compatible than most. Take the same stance as wasm-tools where this is no
# larger than the current version of Rust minus 10 for now.
rust-version = "1.85.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
wit-bindgen-rust-macro = { path = "./macro", optional = true, default-features = false, version = "0.58.0" }
bitflags = { workspace = true, optional = true }
futures = { version = "0.3.30", optional = true, default-features = false, features = ["alloc"] }

# When built as part of libstd
core = { version = "1.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0", optional = true, package = "rustc-std-workspace-alloc" }

[features]
default = ["macros", "realloc", "async", "std", "bitflags", "macro-string"]
macros = ["dep:wit-bindgen-rust-macro"]
realloc = []
std = []

# Back the canonical-ABI `cabi_realloc` with an embedder-provided, bounded
# allocator (`__cabi_arena_realloc`) instead of the global growing allocator.
#
# This keeps the standard `cabi_realloc` export present (so the same build still
# links/instantiates on a composing host such as wasmtime), but routes it to a
# symbol the embedder supplies from a linkable crate — typically a fixed arena
# that traps on exhaustion rather than calling `memory.grow`. That removes the
# allocator/`memory.grow` dependency a canonical-ABI component would otherwise
# pull in, which is what single-address-space / no-grow embedded lowering needs.
# The embedder must define `__cabi_arena_realloc` (see the docs on
# `rt::cabi_realloc`).
cabi-realloc-extern = []
async = []
bitflags = ["dep:bitflags"]
async-spawn = ['async', 'dep:futures']
futures-stream = ['async', 'dep:futures']
macro-string = ["wit-bindgen-rust-macro?/macro-string"]

# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["dep:core", "dep:alloc"]

# Requires a newer `wasm-component-ld` and `wasm-tools`, so currently disabled
# by default. Once the versions of tooling have propagated this will be enabled
# by default.
inter-task-wakeup = ["async"]
